<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="5dp"
    android:layout_marginHorizontal="12dp"

    app:contentPadding="16dp"
    style="@style/Widget.Material3.CardView.Elevated">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_step_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="6dp"
            android:textSize="15sp"
            android:lineSpacingExtra="3dp"
            android:text="@string/card_1_tip_download_shizuku"
            />
        <Button
            android:id="@+id/bt_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/card_1_open_shizuku"
            />
        <TextView
            android:id="@+id/tv_start_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="6dp"
            android:textSize="15sp"
            android:lineSpacingExtra="3dp"
            android:text="@string/card_1_tip_start"
            />
        <Button
            android:id="@+id/bt_start"
            android:layout_width="wrap_content"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            tools:text="@string/bt_start"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>
