<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="12dp"
    app:contentPadding="16dp"
    style="@style/Widget.Material3.CardView.Elevated">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_touch_point_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_touch_point_size"
            android:textSize="14sp"
            />
        <SeekBar
            android:id="@+id/seekbar_stoke_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:max="150"

            android:thumb="@drawable/seekbar_thumb"
            android:progressDrawable="@drawable/seekbar_custom_style"
            android:splitTrack="false"
            />
        <TextView
            android:id="@+id/tv_touch_disappearance_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_touch_line_time"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            />
        <SeekBar
            android:id="@+id/seekbar_fade_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:max="1000"
            android:progress="0"

            tools:progress="400"
            android:thumb="@drawable/seekbar_thumb"
            android:progressDrawable="@drawable/seekbar_custom_style"
            android:splitTrack="false"
            />

        <TextView
            android:id="@+id/tv_line_stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_touch_line_stroke"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            />
        <SeekBar
            android:id="@+id/seekbar_line_stroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:max="30"
            android:progress="0"

            android:thumb="@drawable/seekbar_thumb"
            android:progressDrawable="@drawable/seekbar_custom_style"
            android:splitTrack="false"
            />

        <TextView
            android:id="@+id/tv_circle_stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_touch_point_size"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            />
        <SeekBar
            android:id="@+id/seekbar_circle_stroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:max="30"
            android:progress="0"

            android:thumb="@drawable/seekbar_thumb"
            android:progressDrawable="@drawable/seekbar_custom_style"
            android:splitTrack="false"
            />


        <TextView
            android:id="@+id/tv_color_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_touch_alpha"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            />
        <SeekBar
            android:id="@+id/seekbar_color_alpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:max="100"
            android:min="30"
            android:progress="30"

            android:thumb="@drawable/seekbar_thumb"
            android:progressDrawable="@drawable/seekbar_custom_style"
            android:splitTrack="false"
            />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/color_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>
